modiffication test KO

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,7 +6,7 @@
 edgar:
   first_name: Edgar
   last_name: dupont
-  email: michael@example.com
+  email: edgar@example.com
   country: France
   city: Paris
   postal_code: 75000 
